--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
     <title>RESUME</title>
   </head>
   <body>
+    
     <header>
-      <div class="container">
-        <div class="row">
-          <div class="col col-sm-12 col-md-3 col-lg-3"><img class="photo" src="me2.jpeg" alt="photo" srcset=""></div>
-          <div class="col">
-            <h1><span class="hello"> HELLO!! </span></h1>
-          <h1><span class="name">I'M DHEERAJ PASWAN</span></h1>
-          <!-- <p>I am ReactJS Frontend Web Developer</p> -->
+          <div class="col-12">
+            <h1 class="hello">Hello!!</span></h1>
+          <h1 class="name">I'm Dheeraj Paswan</span></h1>
         </div>
+        <div class="container">
+        <p class="info">~~~~ A ReactJS Frontend Web Developer ~~~~</p>
+        </div> 
+        <div class="photo-div col-12">
+          <img class="photo" src="me2.jpeg" alt="photo" srcset="">
         </div>
         <br>
          <!-- <form method="post" action="/" class="about">
@@ -38,20 +40,20 @@
             Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
           </div>
         </div>
-      </div>   
     </header>
-    <main>>
+    <main>
       <div class="container overflow-hidden">
         <div class="row">
-          <div class="col col-lg-4 col-md-4 col-sm-12">
+          <div class="col-sm-12 col-lg-4">
             <div class="block p-3"><ul class="list">
-              <h4>PERSONAL PROFILE</h4></ul>
+              <h4> PERSONAL PROFILE</h4></ul>
               <p class=p-profile>Leadership Skills | Quick Learner | Decision Making | Code Junkie | Sports Enthusiast</p>
             </div>
           </div>
-          <div class="col col-lg-8 col-md-8">
-           <div class="block p-3"><ul class="list">
-             <h4>EDUCATION</h4></ul>
+          <div class="col col-lg-8 col-sm-12">
+           <div class="block p-3">
+             <ul class="list">
+             <h4><i class="fas fa-graduation-cap"></i> EDUCATION</h4></ul>
             <li class=item><strong>GRADUATION(2018-2021)-</strong>
               <span>Keshav Mahavidyalya (University of Delhi) | <em>CGPA:7.05/10.0</em></span></li>
             <li class=item><strong>Schooling</strong>
@@ -94,8 +96,10 @@
       <a href="https://github.com/dheerj18"><i class="fab fa-github"></i></a>
       <a href="https://www.linkedin.com/in/dheeraj-kumar-95659a213/"><i class="fab fa-linkedin"></i></a>
       <a href="https://www.instagram.com/dheeraj_80/"><i class="fab fa-instagram"></i></a>
+      <p>Copyright ©️ 2022</p>
     
       <h6><a href="#" class="btn btn-primary" target="">Back To Top</a></h6>
+
     </footer>
     <script src="script.js"></script>
   </body>
